--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Speech to Text</h1>
-    <button id="startBtn">Start Recording</button>
-    <div id="output"></div>
+    <div class="container">
+        <h1>Speech to Text</h1>
+        <button id="startBtn">Start Recording</button>
+        <div id="output"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
