--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech to Text</title>
+    <title>BCTI ChatBot</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Speech to Text</h1>
+        <h1>BCTI ChatBot</h1>
+        <h2>Say Something!</h2>
         <button id="startBtn">Start Recording</button>
         <div id="output"></div>
     </div>
