added jokes.. may not work

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>BCTI ChatBot</h1>
         <h2>Say Something!</h2>
+        <select id="voiceSelect"></select> <br>
         <button id="startBtn">Start Recording</button>
         <div id="output"></div>
     </div>
