took out voice select. fixed jokes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class="container">
         <h1>BCTI ChatBot</h1>
-        <h2>Say Something!</h2>
-        <select id="voiceSelect"></select> <br>
+        <h2>Say Something!</h2><br>
         <button id="startBtn">Start Recording</button>
         <div id="output"></div>
     </div>
